homework spring data jpa is completed